@@ -64,6 +64,7 @@ Version CVS HEAD (?)
       with certain velocity split sounds under certain conditions (added bound
       constraints to prevent that)
     - GIG FORMAT EXTENSION: added support for real-time instrument scripts.
+    - added new method Region::GetDimensionRegionIndexByValue()
 
   * src/DLS.cpp, src/DLS.h:
     - added new method File::GetFileName()
